specs/blueprints/errors/validation/expected_sections_got_field.eno
# Expecting sections but getting a field

-- input
field: value
-- input

-- javascript
eno.parse(input).sections('field');
-- javascript

-- php
Eno\Parser::parse($input)->sections('field');
-- php

-- python
enolib.parse(input).sections('field')
-- python

-- ruby
Eno.parse(input).sections('field')
-- ruby

## ValidationError

-- text
Only sections with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]


# Expecting sections but getting a field with continuations

-- input
field:
| continuation
| continuation
-- input

-- javascript
eno.parse(input).sections('field');
-- javascript

-- php
Eno\Parser::parse($input)->sections('field');
-- php

-- python
enolib.parse(input).sections('field')
-- python

-- ruby
Eno.parse(input).sections('field')
-- ruby

## ValidationError

-- text
Only sections with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | | continuation
 *    3 | | continuation
-- snippet

selection: [0,0] => [2,14]

# Expecting sections but getting a field with continuations separated by idle lines

-- input
field: value
| continuation
| continuation

> comment
| continuation
-- input

-- javascript
eno.parse(input).sections('field');
-- javascript

-- php
Eno\Parser::parse($input)->sections('field');
-- php

-- python
enolib.parse(input).sections('field')
-- python

-- ruby
Eno.parse(input).sections('field')
-- ruby

## ValidationError

-- text
Only sections with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
 *    2 | | continuation
 *    3 | | continuation
 *    4 | 
 *    5 | > comment
 *    6 | | continuation
-- snippet

selection: [0,0] => [5,14]
